# dig-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
.zed/: tasks.json
src/: args.rs  client.rs  main.rs
src/packet/: domain.rs  header.rs  message.rs  mod.rs  name.rs  route.rs
