[package]
name = "dig-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.70"
binrw = "0.15.0"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
modular-bitfield = "0.12.0"
rand = "0.9.1"

[lints.rust]
unsafe-code = "forbid"
dead-code = "allow"
